Added references and a readme

--- a/src/NToast/NToast.csproj
+++ b/src/NToast/NToast.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>fa795399-fcce-450b-8a37-8ce1d17f2819</ProjectGuid>
+    <ProjectGuid>{C86D2F68-A141-4371-AC04-CABD5446BC91}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NToast</RootNamespace>
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac">
+      <HintPath>..\..\lib\Autofac\Library\Autofac.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,8 +46,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\NToastAssemblyInfo.cs">
+      <Link>Properties\NToastAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\MobileCollector\lib\fu-sharp\src\Fu.Services.Sessions.Redis\Fu.Services.Sessions.Redis.csproj">
+      <Project>{59B63611-66D7-4929-94DF-FE943D0CD017}</Project>
+      <Name>Fu.Services.Sessions.Redis</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\MobileCollector\lib\fu-sharp\src\Fu.Templates.NHaml\Fu.Templates.NHaml.csproj">
+      <Project>{188DD43D-DB98-46A6-919A-1CECEBA5210F}</Project>
+      <Name>Fu.Templates.NHaml</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\MobileCollector\lib\fu-sharp\src\Fu.Web\Fu.Web.csproj">
+      <Project>{23EF40C1-1B6C-424F-BBEA-CBDE3434AD8C}</Project>
+      <Name>Fu.Web</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\MobileCollector\lib\fu-sharp\src\Fu\Fu.csproj">
+      <Project>{1583A6C9-45DA-46B4-9DBD-B86461DB893B}</Project>
+      <Name>Fu</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
