Added self-restart mechanism, Setup workflow should works now, although not too robust.

--- a/src/Toast.Common/Toast.Common.csproj
+++ b/src/Toast.Common/Toast.Common.csproj
@@ -45,6 +45,7 @@
     <Compile Include="..\ToastAssemblyInfo.cs">
       <Link>Properties\ToastAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="ToastEvents.cs" />
     <Compile Include="ToastSettings.cs" />
   </ItemGroup>
   <ItemGroup />
